--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ footer {
 
 
 /* --- Barre de navigation --- */
+
 .navbar {
   position: fixed;
   top: 0;
@@ -114,10 +115,31 @@ footer {
 .navbar ul {
   list-style: none;
   display: flex;
-  justify-content: center;
-  gap: 2rem;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
   margin: 0;
   padding: 1rem;
+}
+
+.navbar ul li:first-child {
+  margin-right: auto;
+}
+
+.brand {
+  color: #00ffd5 !important;
+  display: flex;
+  align-items: baseline;
+}
+
+.brand .name {
+  font-size: 1.4rem !important;
+  font-weight: bold;
+}
+
+.brand .title {
+  font-size: 1rem !important;
+  font-style: italic;
 }
 
 .navbar a {
@@ -129,7 +151,8 @@ footer {
   transition: all 0.3s ease;
   text-shadow: 0 0 3px #0ff;
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Hover = changement de couleur flashy */
@@ -179,7 +202,112 @@ section {
   transform: translateY(0);
 }
 
-/* --- Contact form -- */
+/* --- index.html --- */
+
+#formationContent {
+  min-height: 1000px;
+  position: relative;
+  max-width: 1240px;
+  width: 100%;
+  margin: 50px auto 50px auto;
+}
+
+.formation-div {
+  width: 35%;
+  border: 3px solid #00ffbf;
+  border-radius: 8px;
+  padding: 1rem;
+  background: rgba(0,0,0,0.4);
+  box-shadow: 0 0 3px #00ffbf;
+}
+
+#formationContent .formation-div span {
+  margin-bottom: 10px;
+  width: 80%;
+}
+
+.formation-spacer {
+  border-bottom: 2px #00FF74 solid;
+  margin: auto;
+  display: block;
+  width: 80%;
+  box-shadow: 0 0 5px #00FF74, 0 0 10px #00ffcc;
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div:nth-child(even) {
+    margin-left: 25%;
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div:nth-child(odd) {
+    margin-left: 75%;
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div {
+    transform: translateX(-50%);
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div:nth-child(even)::before, 
+  .formation-div:nth-child(even) .formation-date {
+    transform: translate(50%, -50%);
+    right: -22.5%;
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div:nth-child(odd)::before,
+  .formation-div:nth-child(odd) .formation-date {
+    transform: translate(-50%, -50%);
+    left: -22%;
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-div::before {
+    content: "";
+    position: absolute;
+    height: 31px;
+    width: 31px;
+    border-radius: 50%;
+    background-color: #0ff;
+    top: 50%;
+    border: solid 2px #0ff;
+    opacity: 1;
+  }
+}
+
+@media (min-width: 740px) {
+  #formationContent .formation-date {
+    position: absolute;
+    top: 60%;
+    font-size: bold;
+    font-style: italic;
+  }
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+.timeline{
+  position: absolute;
+  height: 100%;
+  width: 10px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #00ffaa;
+  opacity: 0.7;
+  border-radius: 20px;
+}
+
+/* --- Contact form --- */
 
 .contact-form {
   max-width: 600px;
@@ -243,4 +371,16 @@ section {
 .contact-form button:active {
   transform: scale(0.95);
   box-shadow: 0 0 10px #0ff;
+}
+
+
+/* --- Footer -- */
+
+.footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  margin: 0;
+  padding: 1rem;
 }
