--- a/style.css
+++ b/style.css
@@ -55,9 +55,18 @@ body {
 
 /* Paragraphe */
 .default-text {
-  max-width: 600px;
+  max-width: 800px;
   margin: 2rem auto;
   font-size: 1.2rem;
+  text-align: center;
+  line-height: 1.5;
+  color: #fff;
+  text-shadow: 0 0 3px #0ff;
+}
+
+h1 {
+  max-width: 800px;
+  margin: 2rem auto;
   text-align: center;
   line-height: 1.5;
   color: #fff;
@@ -209,7 +218,7 @@ section {
   position: relative;
   max-width: 1240px;
   width: 100%;
-  margin: 50px auto 50px auto;
+  margin: 100px auto 50px auto;
 }
 
 .formation-div {
@@ -306,6 +315,29 @@ section {
   opacity: 0.7;
   border-radius: 20px;
 }
+
+/* --- courses.html --- */
+
+.course-list {
+  list-style: none; /* supprime les puces par défaut */
+  padding: 0;
+}
+
+.course-list li {
+  position: relative;
+  padding-left: 1.5em; /* espace pour le chevron */
+  margin-bottom: 0.4em;
+}
+
+.course-list li::before {
+  content: ">";
+  position: absolute;
+  left: 0;
+  color: #00ffcc; /* couleur cyberpunk */
+  font-weight: bold;
+  text-shadow: 0 0 8px #00ffcc; /* effet glowing */
+}
+
 
 /* --- Contact form --- */
 
