--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ body {
   justify-content: space-between;
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    rgba(0,0,0,0.3), 
+    rgba(0,0,0,0.5)
+  );
+  z-index: -1;
+}
+
 /* Titre */
 .glitch {
   font-size: 3rem;
@@ -181,23 +195,43 @@ footer {
 /* --- Sections --- */
 
 section {
-  width: 100%;                 /* occupe toute la largeur */
-  padding: 100px 20px;         /* espace intérieur pour le texte */
-  margin: 0;                    /* plus de marges extérieures */
+  width: 100%;          
+  padding: 100px 20px;       
+  margin: 0;                   
   color: #fff;
   text-align: center;
   line-height: 1.5;
-  backdrop-filter: blur(2px);  /* léger flou pour voir le background */
+  backdrop-filter: blur(2px);
 }
 
 /* Couleurs alternées */
 
 .section-odd {
-  background: rgba(10, 10, 10, 0.8);   /* noir très foncé semi-transparent */
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0.65) 0%,      /* haut clair */
+    rgba(15, 15, 15, 0.7) 90%,      /* corps */
+    rgba(15, 15, 15, 0.6) 100%      /* bas éclairci pour préparer la suite */
+  );
 }
 
 .section-even {
-  background: rgba(20, 20, 20, 0.8);   /* noir très foncé semi-transparent */
+  background: linear-gradient(
+    to bottom,
+    rgba(12, 12, 12, 0.6) 0%,       /* haut clair (match bas de odd) */
+    rgba(10, 10, 10, 0.65) 90%,      /* corps */
+    rgba(20, 20, 20, 0.65) 100%     /* bas éclairci pour préparer la suite */
+  );
+}
+
+.section-odd.first-section {
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0) 5%,   /* léger assombrissement pour fondre avec le bg global */
+    rgba(15, 15, 15, 0.65) 10%, 
+    rgb(10, 10, 10, 0.7) 90%, 
+    rgba(15, 15, 15, 0.6) 100%
+  );
 }
 
 
@@ -319,6 +353,9 @@ section {
 
 /* --- courses.html --- */
 
+
+/* content */
+
 .course-list {
   max-width: 900px;
   margin: 2rem auto;
@@ -391,6 +428,190 @@ section {
   color: #00ffbf;
   text-shadow: 0 0 8px #00ffbf, 0 0 15px #0ff;
 }
+
+/* projects */
+
+#projectContent {
+  display: flex;
+  flex-direction: column;
+  min-height: 1000px;
+  max-width: 1240px;
+  width: 100%;
+  margin: 100px auto 50px auto;
+}
+
+#projectContent-top, #projectContent-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* --- Flashcard --- */
+.flashcard-div {
+  position: relative;
+  width: 30%;
+  min-height: 500px;
+  border: 2px solid #0ff;
+  border-radius: 16px;
+  padding: 2rem 1rem;
+  margin: 1rem;
+  overflow: hidden;
+  background: rgba(0,0,0,0.5);
+  box-shadow: 0 0 15px rgba(0,255,255,0.4);
+  transition: all 0.4s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Background */
+.flashcard-div::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: var(--bg-image) center/cover no-repeat;
+  opacity: 0;
+  transform: scale(1.1);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+  z-index: 0;
+}
+
+.flashcard-div:hover::before {
+  opacity: 0.4;
+  transform: scale(1);
+}
+
+.flashcard-div * {
+  position: relative;
+  z-index: 1;
+}
+
+.flashcard-div:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 0 25px rgba(0,255,255,0.7);
+}
+
+/* Logo avec icône */
+.flashcard-logo {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background-color: rgba(0,255,255,0.1);
+  border: 2px solid #0ff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+  z-index: 1;
+  transition: all 0.3s ease;
+}
+
+.flashcard-icon {
+  font-size: 2.5rem;
+  color: #0ff;
+  transition: all 0.3s ease;
+}
+
+.flashcard-div:hover .flashcard-logo {
+  background-color: rgba(0,255,255,0.2);
+  border-color: #00ff74;
+  box-shadow: 0 0 12px #00ff74;
+}
+
+.flashcard-div:hover .flashcard-icon {
+  color: #00ff74;
+  text-shadow: 0 0 8px #00ffaa;
+}
+
+/* Texte */
+.flashcard-div h2 {
+  font-size: 1.8rem;
+  margin: 0.5rem 0;
+  z-index: 1;
+  color: #fff;
+  transition: color 0.3s ease;
+}
+
+.flashcard-div p {
+  font-size: 1rem;
+  margin: 0.3rem 0;
+  z-index: 1;
+  color: #ccc;
+  text-align: center;
+}
+
+/* Au hover, changement de couleurs */
+.flashcard-div:hover h2 {
+  color: #00ffbf;
+}
+
+.flashcard-div:hover p {
+  color: #eee;
+}
+
+/* Tags */
+.flashcard-tags-div {
+  margin-top: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  z-index: 1;
+}
+
+.flashcard-tag {
+  padding: 0.7rem 1.2rem;
+  border-radius: 12px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 0 4px #000;
+  margin: 15px 0px 15px px;
+}
+
+/* Tags custom colors */
+.tag-java {
+  background: #2de057;
+  box-shadow: 0 0 15px #15b85f;
+}
+
+.tag-javafx {
+  background: #f125e7;
+  box-shadow: 0 0 15px #ab1bb8;
+}
+
+.tag-c {
+  background: #23e6a2;
+  box-shadow: 0 0 15px #1bb8a1;
+}
+
+.tag-python {
+  background: #facb56;
+  box-shadow: 0 0 15px #ad9f1b;
+}
+
+.tag-shell {
+  background: #ef5757;
+  box-shadow: 0 0 15px #b81b1b;
+}
+
+.tag-r
+ {
+  background: #7dd5e9;
+  box-shadow: 0 0 15px #46ebf4;
+ }
+ 
+.tag-css {
+  background: #2b4bca;
+  box-shadow: 0 0 15px #3959db;
+}
+
+.tag-other {
+  background: #d22f75;
+  box-shadow: 0 0 15px #e31b7f;
+}
+
 
 
 /* --- Contact form --- */
